1 - Using the dependency injection principle, we got rid of the dependency between the Lion and Feline classes. 2 - We wrote tests for Feline, Cat, and Lion classes. 3 - Implemented parameterized tests. 4 - We wrote mockups using Mockito. 5 - Evaluated the coverage using Jacoco.